Don't show header until session is confirmed Overflow issue with notifications

--- a/src/assets/scss/sm_global.scss
+++ b/src/assets/scss/sm_global.scss
@@ -26,6 +26,7 @@ body {
   background-color: #161619;
   min-height: 100vh;
   position: relative;
+  overflow: hidden;
 }
 
 
